gccida/c3/reload_combine_note_use
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_combine_note_use/src/reload1.c:9473:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v10 = ( ( unsigned int)( mode_class_0[( unsigned __int8)v8] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_combine_note_use/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_combine_note_use/src/reload1.c:9502:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v20.rtwint = ( __int64)v3->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_combine_note_use/src/reload1.c:9506:15: error: use of undeclared identifier 'off_723588'
fancy_abort( &off_723588[4], 8994, "reload_combine_note_use"); 
              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_combine_note_use/src/reload1.c:9518:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v14 = ( rtx)v3[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_combine_note_use/src/reload1.c:9524:15: error: use of undeclared identifier 'off_723588'
fancy_abort( &off_723588[4], 9015, "reload_combine_note_use"); 
              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_combine_note_use/src/reload1.c:9530:23: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( unsigned int)( mode_class_0[v18] - 5) < 2 ) 
                      ^~~~~~~~~~~~
                      mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_combine_note_use/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_combine_note_use/src/reload1.c:9591:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v3 = ( rtx)v3[1]; 
           ^~~~~
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/reload_combine_note_use/src/obj/reload1.o] Error 1
